# Projeto-2025-IF691

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: 1_xSemAD.ipynb  2_llm_qa.ipynb  3_llm_agent.ipynb  stateful_python_tool.py  x_sem_ad.py
src/data/: agent_prompt.txt  context.txt  qa_prompt.txt
src/evaluation/: utils.py
