[project]
name = "research"
package-mode=false
version = "0.3.0"
description = "Research about integration of conformance analysis and LLMs"
authors = [
    {name = "JDaniloC",email = "jdsc@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pm4py (>=2.7.16,<3.0.0)",
    "transformers (>=4.54.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "torch (>=2.7.1,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]
